syntax = "proto3";

package model;

import "google/protobuf/empty.proto";

message GarageCoordinate {
    float latitude = 1;
    float longitude = 2;
}

message Garage {
    string id = 1;
    string name = 2;
    GarageCoordinate coordinate = 3;
}

message GarageList {
    repeated Garage list = 1;
}

message GarageListByUser {
    map<string, GarageList> list = 1;
}

message GarageUserId {
    string user_id = 1;
}

message GarageAndUserId {
    string user_id = 1;
    Garage garage = 2;
}

service Garages {
    rpc Add(GarageAndUserId) returns (google.protobuf.Empty) {}
    rpc Register(Garage) returns (google.protobuf.Empty) {}
    rpc ListAllGarage(google.protobuf.Empty) returns (GarageList) {}
    rpc List(GarageUserId) returns (GarageList) {}
}
